# perfect-number-rs

./: Cargo.toml  README.md
src/: main.rs
